--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 #билд проекта
-#/dist
+/dist
 
 #файлы вёрстки
 #/templates
@@ -8,4 +8,14 @@
 /node_modules
 package-lock.json
 .parcel-cache
+.vscode
+.module-cache
+.DS_Store
+jspm_packages/
 .idea
+*.swp
+*.log
+atlassian-ide-plugin.xml
+.eslintcache
+node_modules/
+*.lock
