--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "autoprefixer": "10.4.0",
+    "eslint": "6.8.0",
+    "eslint-plugin-html": "6.2.0",
     "postcss": "8.4.5",
     "postcss-custom-properties": "12.0.1",
     "postcss-import": "14.0.2",
