--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "messenger",
   "source": "src/index.html",
   "scripts": {
-    "start": "parcel",
+    "start": "parcel src/layout.pug",
     "build": "parcel build"
   },
   "dependencies": {
     "parcel": "2.0.1"
   },
   "devDependencies": {
+    "@parcel/transformer-pug": "2.0.1",
     "autoprefixer": "10.4.0",
     "eslint": "6.8.0",
     "eslint-plugin-html": "6.2.0",
