добавлено описание и команда

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "start": "node express/index.js",
     "start-server-dev": "nodemon express/index.js"
   },
+  "engine": "16.13.1",
   "devDependencies": {
     "express": "4.17.2",
     "parcel": "2.0.1",
