--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "messenger",
   "scripts": {
-    "start": "node express/index.js",
-    "start-server-dev": "nodemon express/index.js"
+    "start": "node index.js",
+    "start-server-dev": "nodemon index.js",
+    "build": "parcel src/pages/chat/chat.pug",
+    "build-dist": "parcel build src/pages/chat/chat.pug"
   },
   "engine": "16.13.1",
   "devDependencies": {
