--- a/netlify.toml
+++ b/netlify.toml
@@ -6,5 +6,5 @@
 # “publish” is the directory to publish (relative to the root of your repo).
 
 [build]
-  command = "npm run build-dist"
+  command = "npm i && npm run build-dist"
   publish = "dist"
