--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "node": "12"
   },
   "scripts": {
-    "start": "cross-env node src/server.ts",
-    "start-server-dev": "cross-env nodemon src/server.ts",
+    "start": "ts-node src/server.ts",
+    "start-server-dev": "nodemon src/server.ts",
     "build-dev": "parcel src/index.html",
     "build-dist": "parcel build src/**/*.pug",
     "lint": "concurrently \"npm run lintJs\" \"npm run lintCss\"",
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@parcel/transformer-pug": "2.2.1",
     "@parcel/transformer-typescript-tsc": "^2.2.1",
+    "@types/node": "^17.0.21",
     "autoprefixer": "10.4.0",
     "concurrently": "7.0.0",
     "eslint": "6.8.0",
@@ -38,6 +39,7 @@
     "typescript": "4.5.5"
   },
   "dependencies": {
-    "nanoid": "^3.3.1"
+    "nanoid": "^3.3.1",
+    "ts-node": "^10.6.0"
   }
 }
