--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "messenger",
   "author": "Polonskii Sergei",
   "repository": "https://github.com/loosq/messenger",
-  "engines": {
-    "node": "12"
-  },
   "scripts": {
     "start": "npm run build-dist && ts-node src/server.ts",
     "start-server-dev": "nodemon src/server.ts",
     "build-dev": "parcel src/index.html",
-    "build-dist": "parcel build src/**/*.pug",
+    "build-dist": "parcel build src/index.html",
     "lint": "concurrently \"npm run lintJs\" \"npm run lintCss\"",
     "lint::fix": "concurrently \"npm run lintJs::fix\" \"npm run lintCss::fix\"",
     "lintJs": "eslint --ext .js src/",
