--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "npm run build-dist && ts-node src/server.ts",
     "start-server-dev": "nodemon src/server.ts",
-    "build-dev": "parcel src/index.html",
+    "build-dev": "parcel src/index.html --no-cache",
     "build-dist": "parcel build src/index.html",
     "lint": "concurrently \"npm run lintJs\" \"npm run lintCss\"",
     "lint::fix": "concurrently \"npm run lintJs::fix\" \"npm run lintCss::fix\"",
