--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
     "postcss-url": "10.1.3",
     "stylelint": "14.2.0",
     "stylelint-config-standard": "24.0.0",
-    "typescript": "4.5.5"
-  },
-  "dependencies": {
+    "typescript": "4.5.5",
     "nanoid": "^3.3.1",
     "ts-node": "^10.6.0"
   }
