--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-html": "6.2.0",
     "eslint-plugin-pug": "1.2.4",
     "express": "4.17.2",
+    "nanoid": "^3.3.1",
     "nodemon": "2.0.15",
     "parcel": "2.0.1",
     "parcel-transformer-pug-precompile": "^1.0.6",
@@ -33,8 +34,10 @@
     "postcss-url": "10.1.3",
     "stylelint": "14.2.0",
     "stylelint-config-standard": "24.0.0",
-    "typescript": "4.5.5",
-    "nanoid": "^3.3.1",
-    "ts-node": "^10.6.0"
+    "ts-node": "^10.6.0",
+    "typescript": "4.5.5"
+  },
+  "dependencies": {
+    "moment": "^2.29.3"
   }
 }
