--- a/package.json
+++ b/package.json
@@ -16,28 +16,28 @@
   },
   "devDependencies": {
     "@parcel/transformer-pug": "2.2.1",
-    "@parcel/transformer-typescript-tsc": "^2.2.1",
-    "@types/node": "^17.0.21",
+    "@parcel/transformer-typescript-tsc": "2.2.1",
+    "@types/node": "17.0.21",
     "autoprefixer": "10.4.0",
     "concurrently": "7.0.0",
     "eslint": "6.8.0",
     "eslint-plugin-html": "6.2.0",
     "eslint-plugin-pug": "1.2.4",
     "express": "4.17.2",
-    "nanoid": "^3.3.1",
+    "nanoid": "3.3.1",
     "nodemon": "2.0.15",
     "parcel": "2.0.1",
-    "parcel-transformer-pug-precompile": "^1.0.6",
+    "parcel-transformer-pug-precompile": "1.0.6",
     "postcss": "8.4.5",
     "postcss-custom-properties": "12.0.1",
     "postcss-import": "14.0.2",
     "postcss-url": "10.1.3",
     "stylelint": "14.2.0",
     "stylelint-config-standard": "24.0.0",
-    "ts-node": "^10.6.0",
+    "ts-node": "10.6.0",
     "typescript": "4.5.5"
   },
   "dependencies": {
-    "moment": "^2.29.3"
+    "moment": "2.29.3"
   }
 }
