--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lintCss::fix": "stylelint **/*.css --fix"
   },
   "devDependencies": {
+    "@parcel/config-default": "2.5.0",
     "@parcel/transformer-pug": "2.2.1",
     "@parcel/transformer-typescript-tsc": "2.2.1",
     "@types/node": "17.0.21",
