--- a/package.json
+++ b/package.json
@@ -1,42 +1,44 @@
 {
   "name": "messenger",
-  "author": "Polonskii Sergei",
-  "repository": "https://github.com/loosq/messenger",
+  "author": "Polonskii S ergei",
+  "repository": "https://github.com/loosq/middle.messenger.praktikum.yandex",
   "scripts": {
     "start": "npm run build-dist && ts-node src/server.ts",
-    "start-server-dev": "cross-env nodemon src/server.ts",
     "build-dev": "parcel src/index.html --no-cache",
-    "build-dist": "parcel build src/index.html",
-    "lint": "concurrently \"npm run lintJs\" \"npm run lintCss\"",
+    "build-dist": "node ./node_modules/.bin/webpack",
+    "dev": "webpack-dev-server",
     "lint::fix": "concurrently \"npm run lintJs::fix\" \"npm run lintCss::fix\"",
     "lintJs": "eslint --ext .js src/",
     "lintJs::fix": "eslint --fix src/",
     "lintCss": "stylelint **/*.css",
-    "lintCss::fix": "stylelint **/*.css --fix"
+    "lintCss::fix": "stylelint **/*.css --fix",
+    "prepare": "husky install",
+    "test": "concurrently \"npm run lintJs\" \"npm run lintCss\""
   },
   "devDependencies": {
-    "@parcel/config-default": "2.5.0",
-    "@parcel/transformer-pug": "2.2.1",
-    "@parcel/transformer-typescript-tsc": "2.2.1",
     "@types/node": "17.0.21",
-    "autoprefixer": "10.4.0",
     "concurrently": "7.0.0",
+    "css-loader": "6.7.1",
     "eslint": "6.8.0",
     "eslint-plugin-html": "6.2.0",
     "eslint-plugin-pug": "1.2.4",
     "express": "4.17.2",
+    "html-webpack-plugin": "5.5.0",
+    "husky": "8.0.0",
     "nanoid": "3.3.1",
     "nodemon": "2.0.15",
-    "parcel": "2.0.1",
-    "parcel-transformer-pug-precompile": "1.0.6",
-    "postcss": "8.4.5",
-    "postcss-custom-properties": "12.0.1",
-    "postcss-import": "14.0.2",
-    "postcss-url": "10.1.3",
+    "pug-loader": "https://github.com/pugjs/pug-loader/tarball/master",
+    "raw-loader": "4.0.2",
+    "style-loader": "3.3.1",
     "stylelint": "14.2.0",
     "stylelint-config-standard": "24.0.0",
+    "svg-loader": "0.0.2",
+    "ts-loader": "9.3.0",
     "ts-node": "10.6.0",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "webpack": "5.72.1",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.9.0"
   },
   "dependencies": {
     "moment": "2.29.3"
