--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "repository": "https://github.com/loosq/middle.messenger.praktikum.yandex",
   "scripts": {
     "start": "npm run build-dist && ts-node src/server.ts",
-    "build-dev": "parcel src/index.html --no-cache",
     "build-dist": "node ./node_modules/.bin/webpack",
     "dev": "webpack-dev-server",
     "lint::fix": "concurrently \"npm run lintJs::fix\" \"npm run lintCss::fix\"",
@@ -13,9 +12,25 @@
     "lintCss": "stylelint **/*.css",
     "lintCss::fix": "stylelint **/*.css --fix",
     "prepare": "husky install",
-    "test": "concurrently \"npm run lintJs\" \"npm run lintCss\""
+    "test": "jest"
+  },
+  "jest": {
+    "transform": {
+      "\\.(ts)$": "<rootDir>/node_modules/babel-jest",
+      "\\.(pug)$": "<rootDir>/node_modules/pug-jest"
+    },
+    "testEnvironment": "jsdom",
+    "moduleNameMapper": {
+      "\\.(css)$": "identity-obj-proxy",
+      "^utils(.*)$": "<rootDir>/src/utils$1"
+    }
   },
   "devDependencies": {
+    "@babel/core": "7.18.2",
+    "@babel/preset-env": "7.18.2",
+    "@babel/preset-typescript": "7.17.12",
+    "@testing-library/dom": "^8.13.0",
+    "@types/jest": "^28.1.1",
     "@types/node": "17.0.21",
     "concurrently": "7.0.0",
     "css-loader": "6.7.1",
@@ -25,8 +40,10 @@
     "express": "4.17.2",
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.0",
+    "jest": "27.5.1",
     "nanoid": "3.3.1",
     "nodemon": "2.0.15",
+    "pug-jest": "1.0.1",
     "pug-loader": "https://github.com/pugjs/pug-loader/tarball/master",
     "raw-loader": "4.0.2",
     "style-loader": "3.3.1",
@@ -41,6 +58,7 @@
     "webpack-dev-server": "4.9.0"
   },
   "dependencies": {
+    "identity-obj-proxy": "3.0.0",
     "moment": "2.29.3"
   }
 }
