--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "jest": {
     "transform": {
       "\\.(ts)$": "<rootDir>/node_modules/babel-jest",
-      "\\.(pug)$": "<rootDir>/node_modules/pug-jest"
+      "\\.(pug)$": "jest-transform-pug"
     },
     "testEnvironment": "jsdom",
     "moduleNameMapper": {
@@ -29,8 +29,8 @@
     "@babel/core": "7.18.2",
     "@babel/preset-env": "7.18.2",
     "@babel/preset-typescript": "7.17.12",
-    "@testing-library/dom": "^8.13.0",
-    "@types/jest": "^28.1.1",
+    "@testing-library/dom": "8.13.0",
+    "@types/jest": "28.1.1",
     "@types/node": "17.0.21",
     "concurrently": "7.0.0",
     "css-loader": "6.7.1",
@@ -41,9 +41,9 @@
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.0",
     "jest": "27.5.1",
+    "jest-transform-pug": "0.1.0",
     "nanoid": "3.3.1",
     "nodemon": "2.0.15",
-    "pug-jest": "1.0.1",
     "pug-loader": "https://github.com/pugjs/pug-loader/tarball/master",
     "raw-loader": "4.0.2",
     "style-loader": "3.3.1",
